update: いろいろ名前修正

--- a/WebSocketChatApp/wwwroot/test.html
+++ b/WebSocketChatApp/wwwroot/test.html
@@ -14,7 +14,7 @@
 	<ul id="messages"></ul>
 
     	<script language="javascript" type="text/javascript">
-        var uri = "ws://" + window.location.host + "/test";
+        var uri = "wss://" + window.location.host + "/test";
 
         function connect() {
             socket = new WebSocket(uri);
